# GTGraphFork

./: .gitignore  CMakeLists.txt  README.md  old_readme.md
R-MAT/: globals.c  globals.h
SSCA2/: drive_bin.cpp  globals.c  globals.h  graph.c
random/: drive_bin.cpp  globals.c  globals.h
